--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <link rel="stylesheet" href="css/w3.css">
 
     <title>Homework Unit 18</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145408840-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-145408840-2');
+</script>
+
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light nav_custom">
